--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </svg>   
                 </div>
                 <h2>Sign up</h2>
-                <p>create an account with Bobby</p>
+                <p>Create an account with Bobby</p>
                 <div class="popup_container">
                     <form action="">
                         <div class="inputText">
@@ -101,15 +101,15 @@
                 <div class="noti">
                     <div class="text">
                         <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
-                        <img src="/images/bobby3.png" width="30px" alt="">
+                        <img src="/images/bobbyface.png" width="30px" alt="">
                         <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
-                        <img src="/images/bobby3.png" width="30px" alt="">
+                        <img src="/images/bobbyface.png" width="30px" alt="">
                         <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
-                        <img src="/images/bobby3.png" width="30px" alt="">
+                        <img src="/images/bobbyface.png" width="30px" alt="">
                         <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
-                        <img src="/images/bobby3.png" width="30px" alt="">
+                        <img src="/images/bobbyface.png" width="30px" alt="">
                         <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
-                        <img src="/images/bobby3.png" width="30px" alt="">
+                        <img src="/images/bobbyface.png" width="30px" alt="">
                         <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
                     </div>
                 </div>
