--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
                     <p>If you love Bobby or are just getting to know him, you’ve come to the right place! This is where you can explore the wonderful world of the blue creature and his skills. Bobby brand has a lot to offer you, from Merchandise, Toys, Games, Contents to Digital Collectibles.</p>
                     
                     <a href="javascript:void(0)" class="btn_cta">
-                        <span>Lock Your Land!</span>
+                        <span>
+                            <span>Lock Your Land!</span>
+                            <span>Dec 04, 2023</span>
+                        </span>
                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" mirror-in-rtl="true" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M10.25 22.987l7.99-9c.51-.57.76-1.28.76-1.99s-.25-1.42-.74-1.98c-.01 0-.01-.01-.01-.01l-.02-.02-7.98-8.98c-1.1-1.24-3.002-1.35-4.242-.25-1.24 1.1-1.35 3-.25 4.23l6.23 7.01-6.23 7.01c-1.1 1.24-.99 3.13.25 4.24 1.24 1.1 3.13.98 4.24-.26z"></path> </g></svg>
                     </a>
                 </div>
