--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     <li><a href="javascript:void(0)">Map</a></li>
                     <li><a href="./characters.html">Characters</a></li>
                     <li><a href="javascript:void(0)">News</a></li>
+                    <img src="/images/bobbyface.png" alt="">
                 </ul>
             </nav>
             
