--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <li><a href="javascript:void(0)">Marketplace</a></li>
                     <li><a href="javascript:void(0)">Map</a></li>
                     <li><a href="./characters.html">Characters</a></li>
-                    <li><a href="javascript:void(0)">News</a></li>
+                    <li><a href="./news.html">News</a></li>
                     <img src="/images/bobbyface.png" alt="">
                 </ul>
             </nav>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="card">
                         <div class="img">
-                            <img src="./images/news2.jpg" alt="">
+                            <img src="./images/news2.webp" alt="500 Plots Of Land On December 04, 2023">
                         </div>
                         <div class="content">
                             <span class="date">11.20.2023</span>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="card">
                         <div class="img">
-                            <img src="./images/news3.jpg" alt="">
+                            <img src="./images/news3.webp" alt="Bobby Coming to Vietnam">
                         </div>
                         <div class="content">
                             <span class="date">11.20.2023</span>
@@ -281,7 +281,7 @@
             <div class="shopping_container">
                 <div class="card">
                     <div class="img">
-                        <img src="./images/playfrenzland.jpg" alt="">
+                        <img src="./images/playfrenzland.webp" alt="Play Frenzland">
                     </div>
                     <div class="content">
                         <!-- <div class="title">Play Frenzland</div> -->
@@ -291,7 +291,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="./images/characters.png" alt="">
+                        <img src="./images/characters.webp" alt="Meet the characters">
                     </div>
                     <div class="content">
                         <!-- <div class="title">Meet the characters</div> -->
@@ -301,7 +301,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="./images/buyland.jpg" alt="">
+                        <img src="./images/buyland.webp" alt="Lock your land">
                     </div>
                     <div class="content">
                         <!-- <div class="title">Land</div> -->
@@ -311,7 +311,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="./images/shopping.png" alt="">
+                        <img src="./images/shopping.webp" alt="Start Shopping">
                     </div>
                     <div class="content">
                         <!-- <div class="title">Jupiter Mall</div> -->
@@ -385,10 +385,5 @@
 
 </body>
 <script src="./index.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-    $(document).ready(function(){
-        $('.container .minigame .trailer .video').fitVids();
-    });
-</script>
+
 </html>
