--- a/characters.html
+++ b/characters.html
@@ -36,7 +36,7 @@
                             <input type="password" name="password" id="password" placeholder="password">
                         </div>
                         <div class="link">
-                            <a href="#">Forgot password?</a>
+                            <a href="javascript:void(0)">Forgot password?</a>
                         </div>
                         <input type="submit" value="Login" name="login">
                     </form>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="link">
                         <span>Don't have an account?</span>
-                        <a href="#" id="signup">Sign up</a>
+                        <a href="javascript:void(0)" id="signup">Sign up</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                                 </label>
                             </div>
                             <span>
-                                I agree with Bobby's <a href="#">Terms and Conditions</a> and that my personal data will be processed pursuant to the <a href="#">Privacy Policy</a>.
+                                I agree with Bobby's <a href="javascript:void(0)">Terms and Conditions</a> and that my personal data will be processed pursuant to the <a href="javascript:void(0)">Privacy Policy</a>.
                             </span>
                         </div>
                         <input type="submit" value="Sign up" name="signup">
@@ -88,7 +88,7 @@
                     </div>
                     <div class="link">
                         <span>Do you have an account?</span>
-                        <a href="#" class="login">Log in</a>
+                        <a href="javascript:void(0)" class="login">Log in</a>
                     </div>
                 </div>
             </div>
@@ -134,10 +134,10 @@
                 </div>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="#">Marketplace</a></li>
-                    <li><a href="#">Map</a></li>
+                    <li><a href="javascript:void(0)">Marketplace</a></li>
+                    <li><a href="javascript:void(0)">Map</a></li>
                     <li><a href="./characters.html">Characters</a></li>
-                    <li><a href="#">News</a></li>
+                    <li><a href="./news.html">News</a></li>
                 </ul>
             </nav>
             
