--- a/news.html
+++ b/news.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Offical Home of Bobby</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/asset/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/asset/favicon/favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/asset/favicon/favicon.png">
-    <link rel="manifest" href="./images/asset/favicon/site.webmanifest">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="news.css">
-    <link rel="stylesheet" href="responsive.css">
-
+    <meta name="description" content="Bobby coming to Vietnam">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/7c1c241f20bff52b24056c04cd20703c?family=Menco+W00+Black" rel="stylesheet">
+    <!-- Style -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="news.css">
+    <link rel="stylesheet" href="responsive.css">
+    <!-- Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/asset/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/asset/favicon/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/asset/favicon/favicon.png">
+    <link rel="manifest" href="./images/asset/favicon/site.webmanifest">
+
+
 </head>
 <body>
     <div class="container">
@@ -36,7 +40,7 @@
                             <input type="password" name="password" id="password" placeholder="password">
                         </div>
                         <div class="link">
-                            <a href="#">Forgot password?</a>
+                            <a href="javascript:void(0)">Forgot password?</a>
                         </div>
                         <input type="submit" value="Login" name="login">
                     </form>
@@ -46,7 +50,7 @@
                     </div>
                     <div class="link">
                         <span>Don't have an account?</span>
-                        <a href="#" id="signup">Sign up</a>
+                        <a href="javascript:void(0)" id="signup">Sign up</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +81,7 @@
                                 </label>
                             </div>
                             <span>
-                                I agree with Bobby's <a href="#">Terms and Conditions</a> and that my personal data will be processed pursuant to the <a href="#">Privacy Policy</a>.
+                                I agree with Bobby's <a href="javascript:void(0)">Terms and Conditions</a> and that my personal data will be processed pursuant to the <a href="javascript:void(0)">Privacy Policy</a>.
                             </span>
                         </div>
                         <input type="submit" value="Sign up" name="signup">
@@ -88,7 +92,7 @@
                     </div>
                     <div class="link">
                         <span>Do you have an account?</span>
-                        <a href="#" class="login">Log in</a>
+                        <a href="javascript:void(0)" class="login">Log in</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +141,7 @@
                     <li><a href="javascript:void(0)">Marketplace</a></li>
                     <li><a href="javascript:void(0)">Map</a></li>
                     <li><a href="./characters.html">Characters</a></li>
-                    <li><a href="javascript:void(0)">News</a></li>
+                    <li><a href="./news.html">News</a></li>
                     <img src="/images/bobbyface.png" alt="">
                 </ul>
             </nav>
@@ -162,7 +166,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="./images/news2.jpg" alt="">
+                        <img src="./images/news2.webp" alt="500 Plots Of Land">
                     </div>
                     <div class="content">
                         <span class="date">11.20.2023</span>
@@ -172,7 +176,7 @@
                 </div>
                 <div class="card">
                     <div class="img">
-                        <img src="./images/news3.jpg" alt="">
+                        <img src="./images/news3.webp" alt="Bobby Coming to Vietnam">
                     </div>
                     <div class="content">
                         <span class="date">11.20.2023</span>
@@ -181,35 +185,35 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="video">
-                        <video src="./videos/news1.mp4" autoplay loop muted></video>
+                    <div class="img">
+                        <img src="./images/news4.webp" alt="The 5000 Unique Bobby's">
                     </div>
                     <div class="content">
                         <span class="date">11.20.2023</span>
-                        <div class="title_post">POP UP MINT!!</div>
+                        <div class="title_post">The 5000 Unique Bobby's</div>
                         <!-- <a href="javascript:void(0)"><span>Read more <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" mirror-in-rtl="true" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M10.25 22.987l7.99-9c.51-.57.76-1.28.76-1.99s-.25-1.42-.74-1.98c-.01 0-.01-.01-.01-.01l-.02-.02-7.98-8.98c-1.1-1.24-3.002-1.35-4.242-.25-1.24 1.1-1.35 3-.25 4.23l6.23 7.01-6.23 7.01c-1.1 1.24-.99 3.13.25 4.24 1.24 1.1 3.13.98 4.24-.26z"></path> </g></svg></span></a> -->
                     </div>
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <div class="img">
                         <img src="./images/news2.jpg" alt="">
                     </div>
                     <div class="content">
                         <span class="date">11.20.2023</span>
                         <div class="title_post">500 Plots Of Land On December 04, 2023</div>
-                        <!-- <a href="javascript:void(0)"><span>Read more <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" mirror-in-rtl="true" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M10.25 22.987l7.99-9c.51-.57.76-1.28.76-1.99s-.25-1.42-.74-1.98c-.01 0-.01-.01-.01-.01l-.02-.02-7.98-8.98c-1.1-1.24-3.002-1.35-4.242-.25-1.24 1.1-1.35 3-.25 4.23l6.23 7.01-6.23 7.01c-1.1 1.24-.99 3.13.25 4.24 1.24 1.1 3.13.98 4.24-.26z"></path> </g></svg></span></a> -->
+                        <a href="javascript:void(0)"><span>Read more <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" mirror-in-rtl="true" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M10.25 22.987l7.99-9c.51-.57.76-1.28.76-1.99s-.25-1.42-.74-1.98c-.01 0-.01-.01-.01-.01l-.02-.02-7.98-8.98c-1.1-1.24-3.002-1.35-4.242-.25-1.24 1.1-1.35 3-.25 4.23l6.23 7.01-6.23 7.01c-1.1 1.24-.99 3.13.25 4.24 1.24 1.1 3.13.98 4.24-.26z"></path> </g></svg></span></a>
                     </div>
-                </div>
-                <div class="card">
+                </div> -->
+                <!-- <div class="card">
                     <div class="img">
                         <img src="./images/news3.jpg" alt="">
                     </div>
                     <div class="content">
                         <span class="date">11.20.2023</span>
                         <div class="title_post">Bobby Coming to Vietnam !!</div>
-                        <!-- <a href="javascript:void(0)"><span>Read more <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" mirror-in-rtl="true" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M10.25 22.987l7.99-9c.51-.57.76-1.28.76-1.99s-.25-1.42-.74-1.98c-.01 0-.01-.01-.01-.01l-.02-.02-7.98-8.98c-1.1-1.24-3.002-1.35-4.242-.25-1.24 1.1-1.35 3-.25 4.23l6.23 7.01-6.23 7.01c-1.1 1.24-.99 3.13.25 4.24 1.24 1.1 3.13.98 4.24-.26z"></path> </g></svg></span></a> -->
+                        <a href="javascript:void(0)"><span>Read more <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" mirror-in-rtl="true" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M10.25 22.987l7.99-9c.51-.57.76-1.28.76-1.99s-.25-1.42-.74-1.98c-.01 0-.01-.01-.01-.01l-.02-.02-7.98-8.98c-1.1-1.24-3.002-1.35-4.242-.25-1.24 1.1-1.35 3-.25 4.23l6.23 7.01-6.23 7.01c-1.1 1.24-.99 3.13.25 4.24 1.24 1.1 3.13.98 4.24-.26z"></path> </g></svg></span></a>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="btn_seemorenews">
                 <a href="javascript:void(0)" class="btn_seemore">
