update noti on nav

--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
                 </div>
                 <div class="noti">
                     <div class="text">
-                        <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
+                        <span>BOBBY, THE BLUE CREATURE, HAS 5000 UNIQUE COLLECTIBLES COMING SOON!!</span>
                         <img src="/images/bobbyface.png" width="30px" alt="">
-                        <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
+                        <span>BOBBY, THE BLUE CREATURE, HAS 5000 UNIQUE COLLECTIBLES COMING SOON!!</span>
                         <img src="/images/bobbyface.png" width="30px" alt="">
-                        <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
+                        <span>BOBBY, THE BLUE CREATURE, HAS 5000 UNIQUE COLLECTIBLES COMING SOON!!</span>
                         <img src="/images/bobbyface.png" width="30px" alt="">
-                        <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
+                        <span>BOBBY, THE BLUE CREATURE, HAS 5000 UNIQUE COLLECTIBLES COMING SOON!!</span>
                         <img src="/images/bobbyface.png" width="30px" alt="">
-                        <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
+                        <span>BOBBY, THE BLUE CREATURE, HAS 5000 UNIQUE COLLECTIBLES COMING SOON!!</span>
                         <img src="/images/bobbyface.png" width="30px" alt="">
-                        <span>BOBBY, THE BLUE CREATURE HAS 5,000 UNIQUE COLLECTIBLE THAT IS COMING SOON</span>
+                        <span>BOBBY, THE BLUE CREATURE, HAS 5000 UNIQUE COLLECTIBLES COMING SOON!!</span>
                     </div>
                 </div>
                 <div class="right">
