--- a/characters.html
+++ b/characters.html
@@ -145,7 +145,7 @@
         <div class="characters">
             <div class="heading">
                 <div class="img">
-                    <img src="./images/bobby3.png" alt="">
+                    <img src="./images/bobbyred.webp" alt="">
                 </div>
                 <div class="text">
                     <h2>Characters</h2>
